# gpgpu

./: README.md
src/: CMakeLists.txt  libs.cmake  symlink.cmake
src/common/: CMakeLists.txt  camera.cpp  camera.hpp  framebuffer.cpp  framebuffer.hpp  matrix4x4.cpp  matrix4x4.hpp  pointgrid.cpp  pointgrid.hpp  quad.cpp  quad.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vector.hpp
src/lab10/: CMakeLists.txt  main.cpp
src/lab10/kernels/: mersenneTwister.cl  programs.cl
src/lab1_cg_opengl/: CMakeLists.txt  lab1.cg  main.cpp
src/lab2/: CMakeLists.txt  main.cpp
src/lab2/shaders/: convolution.frag  edgeDetection.frag  mandelbrot.frag  passthrough.vert  simple.frag  threshold.frag
src/lab3/: CMakeLists.txt  main.cpp
src/lab3/shaders/: addForce.frag  gauss.frag  gaussH.frag  gaussV.frag  iteration.frag  iteration2.frag  iteration3.frag  simple.frag  visualize.frag
src/lab4/: CMakeLists.txt  main.cpp
src/lab4/shaders/: computeCumulativeHistogram.frag  computeCumulativeHistogram.vert  computeEqualizedHistogram.frag  computeHistogram.frag  computeHistogram.vert  histogram.frag  histogram.vert  luminance.frag  quantize.frag  rellum.frag  satvis.frag  satx.frag  saty.frag  simple.frag  tonemap.frag  uhistogram.vert  uvisualize.frag
src/lab5/: CMakeLists.txt  main.cpp
src/lab5/shaders/: raydir.vert  raytrace.frag
src/lab6_recursive/: CMakeLists.txt  GraphRenderer.cpp  GraphRenderer.hpp  main.cpp
src/lab6_recursive/shaders/: explore.frag  (+4 more)
src/lab8/: CMakeLists.txt  clwrapper.cpp  clwrapper.hpp  main.cpp
src/lab9/: CMakeLists.txt  main.cpp
(+2 files in other folders)
